--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,3 +1,28 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
 @import "bootswatch";
+
+.article-title-anchor {
+  color: black;
+
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
+}
+
+#root {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  main {
+    img {
+      max-width: 100%;
+    }
+  }
+}
