--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -2,14 +2,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "bootswatch";
 
-.article-title-anchor {
-  color: black;
-
-  &:hover {
-    color: black;
-    text-decoration: none;
-  }
-}
 
 #root {
   h1 {
@@ -21,8 +13,21 @@
   }
 
   main {
+
+    h1 {
+      margin-bottom: 2.5rem;
+    }
+
     img {
-      max-width: 100%;
+      max-width: 1024px;
+    }
+  }
+
+  .my-nav-link {
+    font-weight: normal;
+
+    &.active {
+      border-bottom: 1px solid;
     }
   }
 }
