--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -23,11 +23,19 @@
     }
   }
 
+  .navbar-brand {
+    border-bottom: 1px solid rgba(0, 0, 0, 0);
+  }
+
   .my-nav-link {
     font-weight: normal;
 
-    &.active {
+    &.nav-active {
       border-bottom: 1px solid;
+    }
+
+    &.nav-inactive {
+      border-bottom: 1px solid rgba(0, 0, 0, 0);
     }
   }
 }
