--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+<!--suppress JSUnresolvedLibraryURL -->
 {% load render_bundle from webpack_loader %}
 
 <!doctype html>
@@ -15,8 +16,17 @@
 <body>
 {% block content %}
 {% endblock %}
+
+{% if not debug %}
+    <script src="https://cdn.staticfile.org/react/17.0.2/umd/react.production.min.js"></script>
+    <script src="https://cdn.staticfile.org/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
+    <script src="https://cdn.staticfile.org/axios/0.21.1/axios.min.js"></script>
+    <script src="https://cdn.staticfile.org/moment.js/2.29.1/moment.min.js"></script>
+{% endif %}
+
 {% for chunk in chunks %}
     {% render_bundle chunk 'js' %}
 {% endfor %}
+
 </body>
 </html>
