--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -5,17 +5,17 @@
 
 #root {
   h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   h2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   main {
 
     h1 {
-      margin-bottom: 2.5rem;
+      margin-bottom: 2rem;
     }
 
     img {
@@ -37,5 +37,17 @@
     &.nav-inactive {
       border-bottom: 1px solid rgba(0, 0, 0, 0);
     }
+  }
+
+  .article-row {
+    padding: 0.5rem;
+
+    &:not(:last-child) {
+      border-bottom: 2px solid darken(#FFFFFF, 5);
+    }
+  }
+
+  .article-time {
+    font-style: italic;
   }
 }
