add twitter index; add article foreign key for study subject

--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -1,8 +1,6 @@
 {% extends "blog/base.html" %}
 
-{% block title %}
-    随笔列表 -
-{% endblock %}
+{% block title %}随笔列表 - {% endblock %}
 
 {% block content %}
     <div id="root"></div>
