--- a/blog/templates/blog/article.html
+++ b/blog/templates/blog/article.html
@@ -1,8 +1,6 @@
 {% extends "blog/base.html" %}
 
-{% block title %}
-    {{ article.title }} -
-{% endblock %}
+{% block title %}{{ article.title }} - {% endblock %}
 
 {% block content %}
     <div id="root"></div>
