--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,6 +17,12 @@
 {% block content %}
 {% endblock %}
 
+<script>
+    window.appOptions = {
+      debugMode: "{{ debug }}" === "True"
+    }
+</script>
+
 {% if not debug %}
     <script src="https://cdn.staticfile.org/react/17.0.2/umd/react.production.min.js"></script>
     <script src="https://cdn.staticfile.org/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
