--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 <!--suppress JSUnresolvedLibraryURL -->
+{% load static %}
 {% load render_bundle from webpack_loader %}
 
 <!doctype html>
@@ -8,6 +9,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}aweffr的小屋</title>
+    <link rel="icon" type="image/jpeg" href={% static "avatar_188.jpeg" %}>
 
     {% for chunk in chunks %}
         {% render_bundle chunk 'css' %}
