add lodash to externals

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,6 +26,7 @@
 </script>
 
 {% if not debug %}
+    <script src="https://cdn.staticfile.org/lodash.js/4.17.21/lodash.min.js"></script>
     <script src="https://cdn.staticfile.org/react/17.0.2/umd/react.production.min.js"></script>
     <script src="https://cdn.staticfile.org/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.staticfile.org/axios/0.21.1/axios.min.js"></script>
